--- a/src/user-java/user-java.yaml
+++ b/src/user-java/user-java.yaml
@@ -1,49 +1,43 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: poi-deployment
+  name: user-java-deployment
   namespace: api
   labels:
-    deploy: poi
+    deploy: user-java
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: poi
+      app: user-java
   template:
     metadata:
       labels:
-        app: poi
+        app: user-java
     spec:
       containers:
-      - image: "registryipy0113.azurecr.io/poi:1.0"
+      - image: "registryipy0113.azurecr.io/user-java:1.0"
         imagePullPolicy: Always
-        name: poi
+        name: user-java
         ports:
-          - containerPort: 8080
+          - containerPort: 80
             name: http
             protocol: TCP
-        env:
-          - name: WEB_SERVER_BASE_URI
-            value: 'http://0.0.0.0'
-          - name: WEB_PORT
-            value: '8080'
         envFrom:
           - secretRef:
               name: sql
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: poi
+  name: user-java
   namespace: api
 spec:
   type: ClusterIP
   selector:
-    app: poi
+    app: user-java
   ports:
     - protocol: TCP
-      name: poi-http
+      name: user-java-http
       port: 80
-      targetPort: 8080
+      targetPort: 80
